tests/execute/errors/index.cjs
"use strict";
exports = module.exports = require("../index.cjs");
